--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,4 +12,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "Log level: ${{ github.event.inputs.logLevel }}"
+          echo "Log level: ${{ github.event.inputs.isMaintenanceMode }}"
